fix: load correct frontend bundle and set js content-type

--- a/pantryos/pantryos-addon/app/public/index.html
+++ b/pantryos/pantryos-addon/app/public/index.html
@@ -24,6 +24,6 @@
     <script src="./react-dom.min.js"></script>
     <script src="./quagga.min.js"></script>
     <script src="./barcode-scanner.js"></script>
-    <script src="./pantryos-app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
