--- a/pantryos/pantryos-addon/app/public/index.html
+++ b/pantryos/pantryos-addon/app/public/index.html
@@ -1,29 +1,45 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>PantryOS Node Edition</title>
-    <meta
-      name="description"
-      content="Gestione della dispensa per la casa basata su Node.js e React"
-    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Permissions-Policy" content="camera=(), microphone=(), geolocation=()" />
+    <title>PantryOS - Gestione Dispensa</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <noscript>Per utilizzare PantryOS è necessario abilitare JavaScript.</noscript>
-    <div id="root" class="app-root">
-      <div class="loading-screen">
-        <h2>PantryOS Node.js</h2>
-        <p>Caricamento librerie...</p>
-        <div class="loading-spinner"></div>
-      </div>
-    </div>
+    <div id="root"></div>
+
+    <!-- React -->
     <script src="./react.min.js"></script>
     <script src="./react-dom.min.js"></script>
+
+    <!-- Third-party libraries -->
     <script src="./quagga.min.js"></script>
     <script src="./barcode-scanner.js"></script>
+
+    <!-- Utils -->
+    <script src="./utils/api.js"></script>
+    <script src="./utils/helpers.js"></script>
+    <script src="./utils/open-facts-api.js"></script>
+
+    <!-- Components -->
+    <script src="./components/modal.js"></script>
+    <script src="./components/sidebar.js"></script>
+    <script src="./components/grids.js"></script>
+    <script src="./components/barcode-scanner-modal.js"></script>
+    <script src="./components/product-form.js"></script>
+    <script src="./components/generic-manager.js"></script>
+
+    <!-- Pages -->
+    <script src="./pages/dashboard.js"></script>
+    <script src="./pages/inventory.js"></script>
+    <script src="./pages/shopping-list.js"></script>
+    <script src="./pages/manage-products.js"></script>
+    <script src="./pages/manage-data.js"></script>
+    <script src="./pages/settings.js"></script>
+
+    <!-- App -->
     <script src="./app.js"></script>
   </body>
 </html>
