--- a/pantryos/pantryos/app/public/index.html
+++ b/pantryos/pantryos/app/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Permissions-Policy" content="camera=(), microphone=(), geolocation=()" />
+    <meta http-equiv="Permissions-Policy" content="camera=(self), microphone=(self), geolocation=()" />
     <title>PantryOS - Gestione Dispensa</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
