--- a/pantryos/pantryos/app/public/index.html
+++ b/pantryos/pantryos/app/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Permissions-Policy" content="camera=(self), microphone=(self), geolocation=()" />
     <title>PantryOS - Gestione Dispensa</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
